--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@react-navigation/stack": "^5.12.8",
     "native-base": "^2.15.0",
     "react": "16.13.1",
+    "react-moment": "^1.1.1",
     "react-native": "0.63.4",
     "react-native-auto-height-image": "^3.2.3",
     "react-native-gesture-handler": "^1.9.0",
