--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@react-navigation/drawer": "^5.11.4",
     "@react-navigation/native": "^5.8.10",
     "@react-navigation/stack": "^5.12.8",
+    "moment": "^2.29.1",
     "native-base": "^2.15.0",
     "react": "16.13.1",
     "react-moment": "^1.1.1",
